Delete unnecessary comments

--- a/src/test/resources/qa.properties
+++ b/src/test/resources/qa.properties
@@ -3,8 +3,8 @@ operating.system.or.software=free
 machine.class=regular
 machine.type=CP-COMPUTEENGINE-VMIMAGE-N1-STANDARD-8
 number.of.gpu=1
-type.of.gpu=NVIDIA_TESLA_V100
+gpu.type=NVIDIA_TESLA_V100
 local.ssd=2
 datacenter.location=europe-west3
 committed.usage=1
-//price
+price=1,082.77
