Changes in property data and correspondent locators

--- a/src/test/resources/qa.properties
+++ b/src/test/resources/qa.properties
@@ -1,10 +1,10 @@
 number.of.instances=4
-operating.system.or.software=free
-machine.class=regular
-machine.type=CP-COMPUTEENGINE-VMIMAGE-N1-STANDARD-8
+operating.system.or.software=Free
+machine.class=Regular
+machine.type=n1-standard-8
 number.of.gpu=1
 gpu.type=NVIDIA_TESLA_V100
-local.ssd=2
-datacenter.location=europe-west3
-committed.usage=1
+local.ssd=2x375 GB
+datacenter.location=Frankfurt
+committed.usage=1 Year
 price=1,082.77
