--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+                <version>3.7.0</version>
             </plugin>
         </plugins>
     </build>
